--- a/TeslaRent_Client/App.razor
+++ b/TeslaRent_Client/App.razor
@@ -1,12 +1,24 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@*224. Добавить аутентификацию в файл App.razor*@
+@*<CascadingAuthenticationState>*@
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <Authorizing>
+                <p>Please wait, we are authorizing the user</p>
+            </Authorizing>
+            <NotAuthorized>
+                <p>Not Authorized</p>
+            </NotAuthorized>
+        </AuthorizeRouteView>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
+        <CascadingAuthenticationState>
+            <PageTitle>Not found</PageTitle>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p role="alert">Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </CascadingAuthenticationState>
     </NotFound>
 </Router>
+@*</CascadingAuthenticationState>*@
